--- a/package.json
+++ b/package.json
@@ -4,16 +4,34 @@
   "description": "Finance Tracker",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel backend --out-dir backendBuild --extensions \".ts,.tsx\" --source-maps inline",
+    "start": "node backendBuild/server.js",
+    "server": "nodemon backendBuild/server.js"
   },
   "author": "Jason",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.4.0"
+    "knex": "^2.1.0",
+    "mongoose": "^6.4.0",
+    "mysql2": "^2.3.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.18"
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-typescript": "^7.17.12",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.3",
+    "@types/node": "^18.0.0",
+    "jest": "^28.1.1",
+    "jest-cli": "^28.1.1",
+    "nodemon": "^2.0.18",
+    "ts-jest": "^28.0.5",
+    "ts-node": "^10.8.1",
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.4"
   }
 }
