--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "Jason",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
     "express-validator": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^2.1.0",
     "mongoose": "^6.4.0",
     "mysql2": "^2.3.3"
