--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,17 +1,20 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "proxy": "http://localhost:8000",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/chart.js": "^2.9.37",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/react-redux": "^7.1.24",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.8.0",
     "react": "^18.2.0",
@@ -24,7 +27,6 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "typescript": "^4.7.4",
-    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
