--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
-    "client": "npm start --prefix frontend"
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Jason",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
@@ -20,7 +22,9 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^2.1.0",
     "mongoose": "^6.4.0",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "redux-persist": "^6.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.10",
@@ -30,6 +34,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.3",
     "@types/node": "^18.0.0",
+    "concurrently": "^7.2.2",
     "jest": "^28.1.1",
     "jest-cli": "^28.1.1",
     "nodemon": "^2.0.18",
