--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.0.5",
     "@types/react-redux": "^7.1.24",
     "axios": "^0.27.2",
+    "axios-mock-adapter": "^1.21.1",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.8.0",
     "react": "^18.2.0",
@@ -52,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "msw": "^0.43.1"
   }
 }
