--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,6 +18,6 @@ phases:
 # Include only the files required for your application to run.
 artifacts:
   files:
-    - '**/*'
-    discard-paths: no
-    base-directory: frontend/build
+    - package.json
+    - package-lock.json
+    - "frontend/build/**/*"
