--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,7 @@ phases:
     commands:
       - echo Build completed on `date`
       - echo Running Tests on Latest Build
-      - npm run test --prefix frontend
+      - npm run test --watchAll=false --prefix frontend
 # Include only the files required for your application to run.
 artifacts:
   files:
@@ -25,4 +25,4 @@ artifacts:
     - package-lock.json
     - "frontend/build/**/*"
     - "backend/**/*"
-    - "node_modules/"
+    - "node_modules"
