--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,7 @@ phases:
     commands:
       - echo Build completed on `date`
       - echo Running Tests on Latest Build
-      - npm run test --prefix frontend -- --watchAll=false
+      - npm run test --prefix frontend
 # Include only the files required for your application to run.
 artifacts:
   files:
